--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -50,6 +50,13 @@ body {
   padding: 1em;
   justify-content: space-between;
 
+  .code-container{
+    border: 4px solid green;
+    &.read-only{
+    border: 4px solid red;
+    }
+  }
+
   .CodeMirror{
     border: 2px solid black;
     color: white;
